lib/codec_g723_1_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Basic library/backend information.
@ffi.Native<ffi.Uint32 Function()>()
external int g723_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> g723_backend_name();

@ffi.Native<ffi.Int32 Function(ffi.Int32)>()
external int g723_backend_supports_bitrate(int bitrate);

/// Encoder.
///
/// encoder_out receives an opaque native handle.
@ffi.Native<ffi.Int32 Function(ffi.Int32, ffi.Pointer<ffi.Pointer<ffi.Void>>)>()
external int g723_encoder_create(
  int bitrate,
  ffi.Pointer<ffi.Pointer<ffi.Void>> encoder_out,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void g723_encoder_destroy(ffi.Pointer<ffi.Void> encoder);

/// pcm must contain exactly 240 signed 16-bit samples at 8000 Hz.
///
/// output_capacity should normally be at least 24 bytes.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Int16>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint32>,
  )
>()
external int g723_encode_frame(
  ffi.Pointer<ffi.Void> encoder,
  ffi.Pointer<ffi.Int16> pcm,
  int pcm_samples,
  ffi.Pointer<ffi.Uint8> output,
  int output_capacity,
  ffi.Pointer<ffi.Uint32> output_size,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Uint32)>()
external int g723_encoder_set_sample_rate(
  ffi.Pointer<ffi.Void> encoder,
  int sample_rate,
);

/// Decoder.
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Pointer<ffi.Void>>)>()
external int g723_decoder_create(
  ffi.Pointer<ffi.Pointer<ffi.Void>> decoder_out,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void g723_decoder_destroy(ffi.Pointer<ffi.Void> decoder);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Uint32)>()
external int g723_decoder_set_sample_rate(
  ffi.Pointer<ffi.Void> decoder,
  int sample_rate,
);

/// Decodes one complete G.723.1 frame.
///
/// pcm_capacity is measured in samples, not bytes, and must be
/// at least 240.
///
/// pcm_samples receives the number of decoded samples.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<ffi.Int16>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint32>,
  )
>()
external int g723_decode_frame(
  ffi.Pointer<ffi.Void> decoder,
  ffi.Pointer<ffi.Uint8> input,
  int input_size,
  ffi.Pointer<ffi.Int16> pcm,
  int pcm_capacity,
  ffi.Pointer<ffi.Uint32> pcm_samples,
);

/// Frame inspection.
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Uint32)>()
external int g723_frame_type(ffi.Pointer<ffi.Uint8> input, int input_size);

@ffi.Native<ffi.Uint32 Function(ffi.Int32)>()
external int g723_frame_size(int frame_type);

enum g723_result_t {
  G723_RESULT_OK(0),
  G723_RESULT_INVALID_ARGUMENT(-1),
  G723_RESULT_UNSUPPORTED(-2),
  G723_RESULT_BAD_FRAME(-3),
  G723_RESULT_NO_MEMORY(-4),
  G723_RESULT_INTERNAL(-5);

  final int value;
  const g723_result_t(this.value);

  static g723_result_t fromValue(int value) => switch (value) {
    0 => G723_RESULT_OK,
    -1 => G723_RESULT_INVALID_ARGUMENT,
    -2 => G723_RESULT_UNSUPPORTED,
    -3 => G723_RESULT_BAD_FRAME,
    -4 => G723_RESULT_NO_MEMORY,
    -5 => G723_RESULT_INTERNAL,
    _ => throw ArgumentError('Unknown value for g723_result_t: $value'),
  };
}

enum g723_bitrate_t {
  G723_BITRATE_5300(5300),
  G723_BITRATE_6300(6300);

  final int value;
  const g723_bitrate_t(this.value);

  static g723_bitrate_t fromValue(int value) => switch (value) {
    5300 => G723_BITRATE_5300,
    6300 => G723_BITRATE_6300,
    _ => throw ArgumentError('Unknown value for g723_bitrate_t: $value'),
  };
}

enum g723_frame_type_t {
  G723_FRAME_TYPE_6300(0),
  G723_FRAME_TYPE_5300(1),
  G723_FRAME_TYPE_SID(2),
  G723_FRAME_TYPE_UNTRANSMITTED(3),
  G723_FRAME_TYPE_INVALID(255);

  final int value;
  const g723_frame_type_t(this.value);

  static g723_frame_type_t fromValue(int value) => switch (value) {
    0 => G723_FRAME_TYPE_6300,
    1 => G723_FRAME_TYPE_5300,
    2 => G723_FRAME_TYPE_SID,
    3 => G723_FRAME_TYPE_UNTRANSMITTED,
    255 => G723_FRAME_TYPE_INVALID,
    _ => throw ArgumentError('Unknown value for g723_frame_type_t: $value'),
  };
}

const int G723_ABI_VERSION = 1;

const int G723_PCM_SAMPLE_RATE = 8000;

const int G723_PCM_SAMPLES_PER_FRAME = 240;

const int G723_PCM_SAMPLE_RATE_16K = 16000;

const int G723_PCM_SAMPLES_PER_FRAME_16K = 480;

const int G723_FRAME_BYTES_5300 = 20;

const int G723_FRAME_BYTES_6300 = 24;

const int G723_FRAME_BYTES_SID = 4;

const int G723_FRAME_BYTES_UNTRANSMITTED = 1;
